CHANGES IN FLTK 1.1.10

	- Fixed RGB colors for round box (STR #2097)
	- Fixed documentation (added missing COMCTRL32.LIB
	  dependency)
	- Fl_Group::clip_children() is now public (STR #2017)
	- Fixed first modifier key event (STR #1952)
	- Fixed wrong default value of Fl_Spinner in 
	  Fluid (STR #1991)
	- Fixed Fluid textcolor output (STR #1992)
	- Added clarification to Fl_GL_Window mode 
	  function (STR #1945)
	- Fl_Group and Fl_Scroll now resize themselves before
	  resizing their children (STR #2032)
	- Fixed adding an idle handler during
	  a draw() call (STR #1950)
	- Improved stability of fl_read_image (STR #2021)
	- Fixed menu position close to screen border (STR #2057)

CHANGES IN FLTK 1.1.9

	- Improved color contrast in secondary selection blocks
	  of Fl_Text_Display (STR #1917)
	- Fixed regression in callback handling (STR #1918)
	- Fixed wrong relative path when absolute path has a 
	  trailing slash in fl_filename_relative (STR #1920)
	- Fixed multiple selction of files and directories in
	  Fl_File_Chooser (STR #1913)
	- Fixed MSWindows crash when selecting umlauts
	  in Fl_Help_View (STR #1912)

CHANGES IN FLTK 1.1.8

	- Documentation fixes (STR #1454, STR #1455, STR #1456,
	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578,
	  STR #1639, STR #1645, STR #1644, STR #1792, STR #1793,
	  STR #1742, STR #1777, STR #1794, STR #1827, STR #1843,
	  STR #1796, STR #1815, STR #1726, STR #1753, STR #1855,
	  STR #1862, STR #1867, STR #1874, STR #1888)
	- Fixed library path in Makefile (STR #1885)
	- Fixed image read for partial regions on X11 
	  (STR #1716)
	- Fixed KDE/Gnome icon paths (STR #1795)
	- Fixed Tab key to wrap around menu bars (STR #1877)
	- Fixed possible timer leak in Scrollbar (STR #1880)
	- Added documentation about the potential limitations
	  of Fl::grab on newer operating systems (STR #1747)
	- Fixed lockout when mixing popups and alerts
	  (STR # 1869)
	- Fixed recursion crash in event handling (STR #1873)